--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@ant-design/icons": "^5.5.1",
     "antd": "^4.21.7",
-    "sass": "^1.50.1",
-    "react-responsive": "^9.0.0-beta.10",
+    "axios": "^1.7.7",
+    "react": "^18.3.1",
     "react-cookie": "^4.1.1",
+    "react-dom": "^18.3.1",
+    "react-query": "^3.39.0",
+    "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.22.3",
-    "react-query": "^3.39.0"
+    "sass": "^1.50.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/node": "^22.7.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
