--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "antd": "^4.21.7",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.0",
+    "react-redux": "^9.1.2",
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.22.3",
     "sass": "^1.50.1"
